src/pyensae/languages/PigParser.py
# Generated from java-escape by ANTLR 4.4
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .PigListener import PigListener
else:
    from PigListener import PigListener

class PigParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    DEFINE=1
    LOAD=2
    FILTER=3
    FOREACH=4
    ORDER=5
    ARRANGE=6
    DISTINCT=7
    COGROUP=8
    JOIN=9
    CROSS=10
    UNION=11
    SPLIT=12
    INTO=13
    IF=14
    ALL=15
    ANY=16
    AS=17
    BY=18
    USING=19
    INNER=20
    OUTER=21
    ONSCHEMA=22
    STAR=23
    PARALLEL=24
    PARTITION=25
    GROUP=26
    AND=27
    OR=28
    NOT=29
    GENERATE=30
    FLATTEN=31
    EVAL=32
    ASC=33
    DESC=34
    INT=35
    LONG=36
    FLOAT=37
    DOUBLE=38
    CHARARRAY=39
    BYTEARRAY=40
    BAG=41
    TUPLE=42
    MAP=43
    IS=44
    NULL=45
    STREAM=46
    THROUGH=47
    STORE=48
    MAPREDUCE=49
    SHIP=50
    CACHE=51
    INPUT=52
    OUTPUT=53
    ERROR=54
    STDIN=55
    STDOUT=56
    LIMIT=57
    SAMPLE=58
    LEFT=59
    RIGHT=60
    FULL=61
    IDENTIFIER=62
    INTEGER=63
    LONGINTEGER=64
    DOUBLENUMBER=65
    FLOATNUMBER=66
    QUOTEDSTRING=67
    EXECCOMMAND=68
    DOLLAR=69
    WS=70
    SL_COMMENT=71
    ML_COMMENT=72
    FILTEROP=73
    COLON=74
    SEMI_COLON=75
    LEFT_PAREN=76
    RIGHT_PAREN=77
    LEFT_CURLYP=78
    RIGHT_CURLYP=79
    LEFT_BRACKET=80
    RIGHT_BRACKET=81
    POUND=82
    EQUAL=83
    COMMA=84
    PERIOD=85
    DIV=86
    PERCENT=87
    PLUS=88
    MINUS=89
    QMARK=90
    FUNC=91
    START=92
    CAST_EXPR=93
    BIN_EXPR=94
    LONGINEGER=95
    MAP_VAL=96
    KEY_VAL_PAIR=97
    LEFT_CURLY=98
    RIGHT_CURLY=99
    BAG_VAL=100

    tokenNames = [ "<INVALID>", "'define'", "'load'", "'filter'", "'foreach'", 
                   "'order'", "'arrange'", "'distinct'", "'cogroup'", "'join'", 
                   "'cross'", "'union'", "'split'", "'into'", "'if'", "'all'", 
                   "'any'", "'as'", "'by'", "'using'", "'inner'", "'outer'", 
                   "'ONSCHEMA'", "'*'", "'parallel'", "'partition'", "'group'", 
                   "'and'", "'or'", "'not'", "'generate'", "'flatten'", 
                   "'eval'", "'asc'", "'desc'", "'int'", "'long'", "'float'", 
                   "'double'", "'chararray'", "'bytearray'", "'bag'", "'tuple'", 
                   "'map'", "'is'", "'null'", "'stream'", "'through'", "'store'", 
                   "'mapreduce'", "'ship'", "'cache'", "'input'", "'output'", 
                   "'stderr'", "'stdin'", "'stdout'", "'limit'", "'sample'", 
                   "'left'", "'right'", "'full'", "IDENTIFIER", "INTEGER", 
                   "LONGINTEGER", "DOUBLENUMBER", "FLOATNUMBER", "QUOTEDSTRING", 
                   "EXECCOMMAND", "'$'", "WS", "SL_COMMENT", "ML_COMMENT", 
                   "FILTEROP", "':'", "';'", "'('", "')'", "'{'", "'}'", 
                   "'['", "']'", "'#'", "'='", "','", "'.'", "'/'", "'%'", 
                   "'+'", "'-'", "'?'", "FUNC", "START", "CAST_EXPR", "BIN_EXPR", 
                   "LONGINEGER", "MAP_VAL", "KEY_VAL_PAIR", "LEFT_CURLY", 
                   "RIGHT_CURLY", "BAG_VAL" ]

    RULE_parse = 0
    RULE_query = 1
    RULE_statement = 2
    RULE_alias = 3
    RULE_op_clause = 4
    RULE_load_clause = 5
    RULE_filename = 6
    RULE_as_clause = 7
    RULE_tuple_def = 8
    RULE_field = 9
    RULE_type = 10
    RULE_simple_type = 11
    RULE_tuple_type = 12
    RULE_bag_type = 13
    RULE_map_type = 14
    RULE_func_clause = 15
    RULE_func_name = 16
    RULE_func_args = 17
    RULE_store_clause = 18
    RULE_filter_clause = 19
    RULE_cond = 20
    RULE_or_cond = 21
    RULE_and_cond = 22
    RULE_unary_cond = 23
    RULE_not_cond = 24
    RULE_null_check_cond = 25
    RULE_expr = 26
    RULE_add_expr = 27
    RULE_multi_expr = 28
    RULE_cast_expr = 29
    RULE_unary_expr = 30
    RULE_eval_expr = 31
    RULE_var_expr = 32
    RULE_projectable_expr = 33
    RULE_dot_proj = 34
    RULE_pound_proj = 35
    RULE_bin_expr = 36
    RULE_neg_expr = 37
    RULE_distinct_clause = 38
    RULE_col_ref = 39
    RULE_alias_col_ref = 40
    RULE_dollar_col_ref = 41
    RULE_infix_expr = 42
    RULE_const_expr = 43
    RULE_scalar = 44
    RULE_map = 45
    RULE_keyvalue = 46
    RULE_string_val = 47
    RULE_bag = 48
    RULE_tuple = 49

    ruleNames =  [ "parse", "query", "statement", "alias", "op_clause", 
                   "load_clause", "filename", "as_clause", "tuple_def", 
                   "field", "type", "simple_type", "tuple_type", "bag_type", 
                   "map_type", "func_clause", "func_name", "func_args", 
                   "store_clause", "filter_clause", "cond", "or_cond", "and_cond", 
                   "unary_cond", "not_cond", "null_check_cond", "expr", 
                   "add_expr", "multi_expr", "cast_expr", "unary_expr", 
                   "eval_expr", "var_expr", "projectable_expr", "dot_proj", 
                   "pound_proj", "bin_expr", "neg_expr", "distinct_clause", 
                   "col_ref", "alias_col_ref", "dollar_col_ref", "infix_expr", 
                   "const_expr", "scalar", "map", "keyvalue", "string_val", 
                   "bag", "tuple" ]

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PigParser.EOF, 0)

        def query(self):
            return self.getTypedRuleContext(PigParser.QueryContext,0)


        def getRuleIndex(self):
            return PigParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitParse(self)




    def parse(self):

        localctx = PigParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self.query(0)
            self.state = 101
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(PigParser.NOT, 0)

        def query(self):
            return self.getTypedRuleContext(PigParser.QueryContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PigParser.StatementContext)
            else:
                return self.getTypedRuleContext(PigParser.StatementContext,i)


        def getRuleIndex(self):
            return PigParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitQuery(self)



    def query(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PigParser.QueryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_query, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 104 
                        self.statement() 
                    self.state = 109
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass

            elif la_ == 2:
                self.state = 110
                self.match(self.NOT)
                self.state = 111 
                self.statement()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PigParser.QueryContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_query)
                    self.state = 114
                    if not self.precpred(self._ctx, 1):
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 115 
                    self.statement() 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(PigParser.StatementContext,0)


        def SEMI_COLON(self):
            return self.getToken(PigParser.SEMI_COLON, 0)

        def op_clause(self):
            return self.getTypedRuleContext(PigParser.Op_clauseContext,0)


        def NOT(self):
            return self.getToken(PigParser.NOT, 0)

        def EQUAL(self):
            return self.getToken(PigParser.EQUAL, 0)

        def alias(self):
            return self.getTypedRuleContext(PigParser.AliasContext,0)


        def getRuleIndex(self):
            return PigParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PigParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 136
            token = self._input.LA(1)
            if token in [self.LOAD, self.FILTER, self.DISTINCT, self.STORE, self.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                _la = self._input.LA(1)
                if _la==PigParser.IDENTIFIER:
                    self.state = 121 
                    self.alias()
                    self.state = 122
                    self.match(self.EQUAL)


                self.state = 126 
                self.op_clause()
                self.state = 127
                self.match(self.SEMI_COLON)

            elif token in [self.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(self.NOT)

                self.state = 130 
                self.statement()
                self.state = 132
                _la = self._input.LA(1)
                if _la==PigParser.IDENTIFIER:
                    self.state = 131 
                    self.alias()


                self.state = 134 
                self.op_clause()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AliasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PigParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PigParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitAlias(self)




    def alias(self):

        localctx = PigParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(self.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Op_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def load_clause(self):
            return self.getTypedRuleContext(PigParser.Load_clauseContext,0)


        def store_clause(self):
            return self.getTypedRuleContext(PigParser.Store_clauseContext,0)


        def distinct_clause(self):
            return self.getTypedRuleContext(PigParser.Distinct_clauseContext,0)


        def filter_clause(self):
            return self.getTypedRuleContext(PigParser.Filter_clauseContext,0)


        def getRuleIndex(self):
            return PigParser.RULE_op_clause

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterOp_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitOp_clause(self)




    def op_clause(self):

        localctx = PigParser.Op_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_op_clause)
        try:
            self.state = 144
            token = self._input.LA(1)
            if token in [self.LOAD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140 
                self.load_clause()

            elif token in [self.STORE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141 
                self.store_clause()

            elif token in [self.FILTER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 142 
                self.filter_clause()

            elif token in [self.DISTINCT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 143 
                self.distinct_clause()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Load_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(PigParser.USING, 0)

        def func_clause(self):
            return self.getTypedRuleContext(PigParser.Func_clauseContext,0)


        def LOAD(self):
            return self.getToken(PigParser.LOAD, 0)

        def as_clause(self):
            return self.getTypedRuleContext(PigParser.As_clauseContext,0)


        def filename(self):
            return self.getTypedRuleContext(PigParser.FilenameContext,0)


        def getRuleIndex(self):
            return PigParser.RULE_load_clause

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterLoad_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitLoad_clause(self)




    def load_clause(self):

        localctx = PigParser.Load_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_load_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(self.LOAD)
            self.state = 147 
            self.filename()
            self.state = 150
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(self.USING)
                self.state = 149 
                self.func_clause()


            self.state = 153
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 152 
                self.as_clause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTEDSTRING(self):
            return self.getToken(PigParser.QUOTEDSTRING, 0)

        def getRuleIndex(self):
            return PigParser.RULE_filename

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterFilename(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitFilename(self)




    def filename(self):

        localctx = PigParser.FilenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_filename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(self.QUOTEDSTRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class As_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AS(self):
            return self.getToken(PigParser.AS, 0)

        def tuple_def(self):
            return self.getTypedRuleContext(PigParser.Tuple_defContext,0)


        def getRuleIndex(self):
            return PigParser.RULE_as_clause

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterAs_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitAs_clause(self)




    def as_clause(self):

        localctx = PigParser.As_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_as_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(self.AS)
            self.state = 158 
            self.tuple_def()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tuple_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tuple_def(self):
            return self.getTypedRuleContext(PigParser.Tuple_defContext,0)


        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PigParser.FieldContext)
            else:
                return self.getTypedRuleContext(PigParser.FieldContext,i)


        def NOT(self):
            return self.getToken(PigParser.NOT, 0)

        def RIGHT_PAREN(self):
            return self.getToken(PigParser.RIGHT_PAREN, 0)

        def LEFT_PAREN(self):
            return self.getToken(PigParser.LEFT_PAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PigParser.COMMA)
            else:
                return self.getToken(PigParser.COMMA, i)

        def getRuleIndex(self):
            return PigParser.RULE_tuple_def

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.enterTuple_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, PigListener ):
                listener.exitTuple_def(self)




    def tuple_def(self):

        localctx = PigParser.Tuple_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tuple_def)
        self._la = 0 # Token type
        try:
            self.state = 178
            token = self._input.LA(1)
            if token in [self.LEFT_PAREN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(self.LEFT_PAREN)
                self.state = 161 
                self.field()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PigParser.COMMA:
                    self.state = 162
                    self.match(self.COMMA)
                    self.state = 163 
                    self.field()
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(self.RIGHT_PAREN)

            elif token in [self.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(self.NOT)

                self.state = 172 
                self.tuple_def()
                self.state = 174 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 173 
                        self.field()

                    else:
                        raise NoViableAltException(self)
                    self.state = 176 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)


            else:
                raise NoViableAltException(self)
